--- a/index.html
+++ b/index.html
@@ -15,28 +15,30 @@
     </header>
 
     <main>
-        <div>
+        <div id="display">
             <span>####</span>
         </div>
-        <button type="button" id="clear">C</button>
-        <button type="button" class="operator">+-</button>
-        <button type="button" class="operator">%</button>
-        <button type="button" class="operator">div</button>
-        <button type="button" class="digit">7</button>
-        <button type="button" class="digit">8</button>
-        <button type="button" class="digit">9</button>
-        <button type="button" class="operator">X</button>
-        <button type="button" class="digit">4</button>
-        <button type="button" class="digit">5</button>
-        <button type="button" class="digit">6</button>
-        <button type="button" class="operator">-</button>
-        <button type="button" class="digit">1</button>
-        <button type="button" class="digit">2</button>
-        <button type="button" class="digit">3</button>
-        <button type="button" class="operator">+</button>
-        <button type="button" id="zero">0</button>
-        <button type="button" class="digit">.</button>
-        <button type="button" id="equal">=</button>
+            <div id="pad">
+            <button type="button" id="clear">C</button>
+            <button type="button" class="operator">&plusmn;</button>
+            <button type="button" class="operator">&percnt;</button>
+            <button type="button" class="operator">&divide;</button>
+            <button type="button" class="digit">7</button>
+            <button type="button" class="digit">8</button>
+            <button type="button" class="digit">9</button>
+            <button type="button" class="operator">&times;</button>
+            <button type="button" class="digit">4</button>
+            <button type="button" class="digit">5</button>
+            <button type="button" class="digit">6</button>
+            <button type="button" class="operator">&minus;</button>
+            <button type="button" class="digit">1</button>
+            <button type="button" class="digit">2</button>
+            <button type="button" class="digit">3</button>
+            <button type="button" class="operator">&plus;</button>
+            <button type="button" id="zero">0</button>
+            <button type="button" class="digit">.</button>
+            <button type="button" id="equal">&equals;</button>
+        </div>
     </main>
 
 </body>
