--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
     <main>
         <div id="display">
-            <span>####</span>
+            <span></span>
         </div>
-            <div id="pad">
+        <div id="pad">
             <button type="button" id="clear">C</button>
-            <button type="button" class="operator">&plusmn;</button>
-            <button type="button" class="operator">&percnt;</button>
-            <button type="button" class="operator">&divide;</button>
+            <button type="button" class="operator" id="delete">&#9249;</button>
+            <button type="button" class="operator" id="modulus">&percnt;</button>
+            <button type="button" class="operator" id="divide">&divide;</button>
             <button type="button" class="digit">7</button>
             <button type="button" class="digit">8</button>
             <button type="button" class="digit">9</button>
-            <button type="button" class="operator">&times;</button>
+            <button type="button" class="operator" id="multiply">&times;</button>
             <button type="button" class="digit">4</button>
             <button type="button" class="digit">5</button>
             <button type="button" class="digit">6</button>
-            <button type="button" class="operator">&minus;</button>
+            <button type="button" class="operator" id="subtract">&minus;</button>
             <button type="button" class="digit">1</button>
             <button type="button" class="digit">2</button>
             <button type="button" class="digit">3</button>
-            <button type="button" class="operator">&plus;</button>
+            <button type="button" class="operator" id="add">&plus;</button>
             <button type="button" id="zero">0</button>
             <button type="button" class="digit">.</button>
             <button type="button" id="equal">&equals;</button>
