--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="pad">
             <button type="button" id="clear">C</button>
-            <button type="button" class="operator" id="delete">&#9249;</button>
+            <button type="button" id="delete">&#9249;</button>
             <button type="button" class="operator" id="modulus">&percnt;</button>
             <button type="button" class="operator" id="divide">&divide;</button>
             <button type="button" class="digit">7</button>
@@ -35,7 +35,7 @@
             <button type="button" class="digit">2</button>
             <button type="button" class="digit">3</button>
             <button type="button" class="operator" id="add">&plus;</button>
-            <button type="button" id="zero">0</button>
+            <button type="button" class="digit" id="zero">0</button>
             <button type="button" class="digit">.</button>
             <button type="button" id="equal">&equals;</button>
         </div>
